# ekema

./: .env.example  .gitignore  README.md  pubspec.yaml
.github/workflows/: flutter.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/ekema/ekema/: MainActivity.kt
lib/: main.dart
lib/core/di/: injection.dart
lib/core/services/: ai_service.dart  connectivity_service.dart  fallback_ai_service.dart  openrouter_service.dart
lib/core/theme/: app_theme.dart
lib/core/utils/: pdf_generator.dart
lib/data/repositories/: chat_repository.dart  procedure_repository.dart
lib/presentation/providers/: ai_chat_provider.dart  voice_provider.dart
lib/presentation/screens/: dialogue_screen.dart  document_generator_screen.dart  history_screen.dart  home_screen.dart  result_screen.dart  settings_screen.dart
lib/presentation/widgets/: category_card.dart  search_bar.dart
linux/: CMakeLists.txt  my_application.cc  my_application.h
linux/flutter/: CMakeLists.txt  flutter_wrapper_plugin_registrant.cc  flutter_wrapper_plugin_registrant.h
linux/runner/: CMakeLists.txt  my_application.cc
test/: procedure_test.dart  widget_test.dart
